# supermetrics-python-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  README.md  SECURITY.md  justfile  openapi-spec.yaml  pr-description.md  pyproject.toml  sdk-endpoints.txt
.bmad/_cfg/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/bmm/workflows/testarch/ci/: workflow.yaml
.bmad/core/: config.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sdk-build.yml  sdk-lint-test.yml  sdk-pypi-publish.yml  sdk-release-pipeline.yml  sdk-test-pypi-publish.yml  superpy-sdk-build.yml  superpy-sdk-lint-test.yml  superpy-sdk-pypi-publish.yml  superpy-sdk-release-pipeline.yml  superpy-sdk-test-pypi-publish.yml  test.yml
docs/: README.md  api-reference.md  error-handling.md  index.md  installation.md  usage.md  user-guide.md
examples/: README.md  SETUP_GUIDE.md  accounts_example.py  async_flow.py  complete_flow.py  connector_builder_flow.py  login_links_example.py  logins_example.py  queries_example.py
scripts/: README.md  filter_openapi_spec.py  regenerate_client.sh  sdk-endpoints.yaml
scripts/references/: sdk-endpoint-filters.yaml
spec/: PRD.md  architecture.md  bmm-workflow-status.md  epics.md  sprint-status.yaml  tech-spec-epic-1.md
spec/stories/: story-1.1.md  story-1.2.md  story-1.3.md  story-1.4.md  story-1.5.md  story-1.6.md  story-1.7.md  story-1.8.md  story-1.9.md  story-context-1.1.xml  story-context-1.2.xml  story-context-1.3.xml  story-context-1.4.xml  story-context-1.5.xml  story-context-1.6.xml  story-context-1.7.xml  story-context-1.8.xml  story-context-1.9.xml
src/supermetrics/: __init__.py  __version__.py  async_client.py  client.py  exceptions.py
src/supermetrics/_generated/: README.md  pyproject.toml
src/supermetrics/_generated/supermetrics_api_client/: __init__.py
src/supermetrics/_generated/supermetrics_api_client/api/connector_logo/: get_connector_logo.py  upload_connector_logo.py
src/supermetrics/_generated/supermetrics_api_client/api/connector_logs/: get_connector_log.py  list_connector_logs.py
src/supermetrics/_generated/supermetrics_api_client/api/connector_secrets/: create_connector_secret.py  delete_connector_secret.py  list_connector_secrets.py  update_connector_secret.py
src/supermetrics/_generated/supermetrics_api_client/api/connectors/: create_connector.py  delete_connector.py  get_connector.py  list_connectors.py  update_connector.py
src/supermetrics/_generated/supermetrics_api_client/api/data_backfills/: create_backfill.py  get_backfill_by_id.py  get_latest_backfill.py  list_incomplete_backfills.py  update_backfill_status.py
src/supermetrics/_generated/supermetrics_api_client/api/data_source/: get_accounts.py
src/supermetrics/_generated/supermetrics_api_client/api/data_source_login_links/: close_login_link.py  create_login_link.py  get_login_link.py  list_login_links.py
src/supermetrics/_generated/supermetrics_api_client/api/data_source_logins/: get_data_source_login.py  list_data_source_logins.py
src/supermetrics/_generated/supermetrics_api_client/api/datasource/: get_datasource_details.py  get_teams_team_id_datasource_data_source_id.py
src/supermetrics/_generated/supermetrics_api_client/api/dwh/: create_backfill.py  get_backfill_by_id.py  get_latest_backfill.py  list_incomplete_backfills.py  update_backfill_status.py
src/supermetrics/_generated/supermetrics_api_client/api/get_data/: get_data.py
src/supermetrics/_generated/supermetrics_api_client/models/: __init__.py  api_error.py  backfill.py  backfill_response.py  backfill_response_meta.py  backfill_status.py  close_login_link_response_401.py  close_login_link_response_401_meta.py  close_login_link_response_404.py  close_login_link_response_404_error.py  close_login_link_response_422.py  close_login_link_response_422_meta.py  close_login_link_response_429.py  close_login_link_response_429_meta.py  close_login_link_response_500.py  close_login_link_response_500_error.py  connector.py  connector_configuration.py  connector_configuration_configuration_json.py  connector_with_configuration.py  create_backfill_request.py  create_backfill_response.py  create_backfill_response_400.py  create_backfill_response_400_meta.py  create_backfill_response_401.py  create_backfill_response_401_meta.py  create_backfill_response_403.py  create_backfill_response_403_meta.py  create_backfill_response_422.py  create_backfill_response_422_meta.py  create_backfill_response_429.py  create_backfill_response_429_meta.py  create_backfill_response_500.py  create_backfill_response_500_meta.py  create_connector_body.py  create_connector_response_401.py  create_connector_response_401_meta.py  create_connector_response_403.py  create_connector_response_403_meta.py  create_connector_response_404.py  (+331 more)
src/supermetrics/resources/: __init__.py  _error_handlers.py  accounts.py  backfills.py  connector_builder.py  connector_builder_logs.py  connector_builder_secrets.py  datasource_details.py  login_links.py  logins.py  queries.py
tests/: __init__.py  conftest.py  test_project_structure.py  test_supermetrics.py
tests/unit/: test_accounts.py  test_backfills.py  test_client_init.py  test_connector_builder.py  test_connector_builder_logs.py  test_connector_builder_secrets.py  test_datasource_details.py  test_exceptions.py  test_login_links.py  test_logins.py  test_queries.py
