[project]
name = "supermetrics"
version = "0.1.0"
description = "Official Python client for Supermetrics"
readme = "README.md"
authors = [
  {name = "Aleksei Popov", email = "aleksei.popov@supermetrics.com"}
]
maintainers = [
  {name = "Aleksei Popov", email = "aleksei.popov@supermetrics.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "Apache-2.0"}
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
  "python-dateutil>=2.8.0",
  "attrs>=23.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.15.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
bugs = "https://github.com/Supermetrics/SuperPy-SDK/issues"
changelog = "https://github.com/Supermetrics/SuperPy-SDK/blob/main/HISTORY.md"
homepage = "https://github.com/Supermetrics/SuperPy-SDK"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
